specs for has many and belongs to association between adventures and chapters

--- a/db/config.yml
+++ b/db/config.yml
@@ -1,7 +1,15 @@
+
 development:
   adapter: postgresql
+  encoding: unicode
+  host: localhost
   database: cyoa_development
+  username: blnkt
+  password: blnkt
 
 test:
   adapter: postgresql
+  host: localhost
   database: cyoa_test
+  username: blnkt
+  password: blnkt
